--- a/AdvertiserCampaigns.html
+++ b/AdvertiserCampaigns.html
@@ -159,7 +159,7 @@
     <header class="border-b border-strong shadow-sm app-header">
       <div class="flex items-center justify-between px-4 py-2">
         <div class="flex items-center gap-3">
-          <img src="./assets/BeaconLogo.png" alt="Beacon Logo" class="h-9 w-auto" />
+          <img src="./assets/BeaconLogo.svg" alt="Beacon Logo" class="h-12 w-auto" />
         </div>
 
         <nav class="flex items-center gap-3 ml-auto">
@@ -538,7 +538,7 @@
 <!-- Create Campaign Modal -->
 <div id="createCampaignModal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 hidden">
   <div class="bg-white rounded-lg shadow-lg w-full max-w-6xl max-h-[90vh] p-6 relative">
-    <button id="closeCampaignModal" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700">
+    <button id="closeCampaignModal" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700" aria-label="Close Create Campaign Modal">
       <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
       </svg>
@@ -555,12 +555,12 @@
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
             <div>
               <label class="block text-sm font-medium text-gray-700 mb-1">ID</label>
-              <input type="text" id="beaconCampaignId" class="w-full border border-gray-300 rounded-md px-3 py-2 bg-gray-100 cursor-not-allowed focus:outline-none" readonly>
+              <input type="text" id="beaconCampaignId" class="w-full border border-gray-300 rounded-md px-3 py-2 bg-gray-100 cursor-not-allowed focus:outline-none" readonly aria-label="Beacon Campaign ID" title="Beacon Campaign ID">
               <p class="text-xs text-gray-500 mt-1">Auto-generated campaign identifier</p>
             </div>
             <div>
               <label class="block text-sm font-medium text-gray-700 mb-1">Name *</label>
-              <input type="text" id="beaconCampaignName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+              <input type="text" id="beaconCampaignName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required aria-label="Beacon Campaign Name" title="Beacon Campaign Name" placeholder="Enter campaign name">
               <p class="text-xs text-gray-500 mt-1">Common identifier across all platforms</p>
             </div>
           </div>
@@ -571,7 +571,7 @@
       <div class="mb-4">
         <div class="flex items-center justify-between mb-2">
           <h3 class="text-lg font-semibold text-gray-800">Connectors</h3>
-          <button type="button" id="connectorsToggle" class="relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent bg-gray-200 transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" role="switch" aria-checked="false">
+          <button type="button" id="connectorsToggle" class="relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent bg-gray-200 transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" role="switch" aria-checked="false" tabindex="0" aria-label="Toggle Connectors Section">
             <span aria-hidden="true" class="pointer-events-none inline-block h-5 w-5 transform rounded-full bg-white shadow ring-0 transition duration-200 ease-in-out translate-x-0"></span>
           </button>
         </div>
@@ -622,14 +622,14 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-4">
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Seed</label>
-                <select id="campaignSeed" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <select id="campaignSeed" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Select Seed" title="Select Seed">
                   <option value="">-- Select Seed --</option>
                   <option value="Default Seed List">Default Seed List</option>
                 </select>
               </div>
               <div class="xl:col-span-2">
                 <label class="block text-sm font-medium text-gray-700 mb-1">How would you like to organize your campaigns?</label>
-                <select id="campaignOrganization" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <select id="campaignOrganization" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Select Campaign Organization" title="Select Campaign Organization">
                   <option value="">-- Select Organization --</option>
                   <option value="Create new campaign group">Create new campaign group</option>
                   <option value="Add campaigns to existing group">Add campaigns to existing group</option>
@@ -638,7 +638,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Pace Ahead</label>
-                <select id="campaignPacing" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <select id="campaignPacing" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Select Pacing" title="Select Pacing">
                   <option value="">-- Select Pacing --</option>
                   <option value="Pace Ahead">Pace Ahead</option>
                   <option value="Pace Behind">Pace Behind</option>
@@ -646,7 +646,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Timezone</label>
-                <select id="campaignTimezone" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <select id="campaignTimezone" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Select Timezone" title="Select Timezone">
                   <option value="">-- Select Timezone --</option>
                   <option value="UTC">UTC (Coordinated Universal Time)</option>
                   <option value="EST">EST (Eastern Standard Time)</option>
@@ -657,15 +657,15 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Start Date (UTC)</label>
-                <input type="date" id="campaignStartDate" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <input type="date" id="campaignStartDate" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Select Start Date" title="Select Start Date">
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">End Date (UTC)</label>
-                <input type="date" id="campaignEndDate" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <input type="date" id="campaignEndDate" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Select End Date" title="Select End Date">
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Campaign Channel</label>
-                <select id="campaignChannel" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <select id="campaignChannel" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Select Campaign Channel" title="Select Campaign Channel">
                   <option value="">-- Select Channel --</option>
                   <option value="Display">Display</option>
                   <option value="Video">Video</option>
@@ -675,7 +675,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Campaign Name</label>
-                <select id="campaignName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <select id="campaignName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Select Campaign Name" title="Select Campaign Name">
                   <option value="">-- Select Campaign Name --</option>
                   <option value="Brand Awareness">Brand Awareness</option>
                   <option value="Persona">Persona</option>
@@ -691,7 +691,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Campaign KPI</label>
-                <select id="campaignKPI" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <select id="campaignKPI" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Select Campaign KPI" title="Select Campaign KPI">
                   <option value="">-- Select KPI --</option>
                   <option value="Click-Through Rate (CTR)">Click-Through Rate (CTR)</option>
                   <option value="Cost Per Mille (CPM)">Cost Per Mille (CPM)</option>
@@ -719,7 +719,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Campaign Name</label>
-                <select id="adServerCampaignName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500">
+                <select id="adServerCampaignName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" aria-label="Select Campaign Name" title="Select Campaign Name">
                   <option value="">-- Select Campaign Name --</option>
                   <option value="Brandawareness">Brand Awareness</option>
                   <option value="Persona">Persona</option>
@@ -728,7 +728,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Schedule</label>
-                <input type="date" id="adServerSchedule" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500">
+                <input type="date" id="adServerSchedule" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" aria-label="Select Schedule Date" title="Select Schedule Date">
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Landing Page Name</label>
@@ -770,7 +770,7 @@
   <div class="-mx-2 px-4 py-1 mb-2 text-xs font-semibold text-gray-600 uppercase rounded-md" style="background-color: #d1d5db;">
     Custom Instructions
   </div>
-  <textarea id="customInstructions" rows="4" data-audit-notes class="block w-full border border-gray-300 rounded-md p-2 text-sm text-gray-900"></textarea>
+  <textarea id="customInstructions" rows="4" data-audit-notes class="block w-full border border-gray-300 rounded-md p-2 text-sm text-gray-900" aria-label="Enter Custom Instructions" title="Enter Custom Instructions"></textarea>
 </div>
     <div class="mt-4 flex justify-between">
       <button data-clear class="bg-red-100 text-red-700 px-4 py-2 text-sm rounded-md hover:bg-red-200">Clear</button>
