--- a/CampaignsAdGroup.html
+++ b/CampaignsAdGroup.html
@@ -184,7 +184,7 @@
     <header class="border-b border-gray-200 shadow-sm" style="background-color: #004E8B;">
       <div class="flex items-center justify-between px-4 py-2">
         <div class="flex items-center gap-3">
-          <img src="./assets/BeaconLogo.png" alt="Beacon Logo" class="h-9 w-auto" />
+          <img src="./assets/BeaconLogo.svg" alt="Beacon Logo" class="h-12 w-auto" />
         </div>
 
         <nav class="flex items-center gap-3 ml-auto">
@@ -526,7 +526,7 @@
 <!-- Create Ad Group Modal -->
 <div id="createAdGroupModal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 hidden">
   <div class="bg-white rounded-lg shadow-lg w-full max-w-6xl max-h-[90vh] p-6 relative">
-    <button id="closeAdGroupModal" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700">
+    <button id="closeAdGroupModal" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700" aria-label="Close Create Ad Group Modal" title="Close">
       <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
       </svg>
@@ -543,28 +543,28 @@
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
             <div>
               <label class="block text-sm font-medium text-gray-700 mb-1">ID</label>
-              <input type="text" id="beaconAdGroupId" class="w-full border border-gray-300 rounded-md px-3 py-2 bg-gray-100 focus:outline-none" readonly>
+              <input type="text" id="beaconAdGroupId" class="w-full border border-gray-300 rounded-md px-3 py-2 bg-gray-100 focus:outline-none" readonly aria-label="Beacon Ad Group ID" title="Beacon Ad Group ID">
               <p class="text-xs text-gray-500 mt-1">System-generated identifier</p>
             </div>
             <div>
               <label class="block text-sm font-medium text-gray-700 mb-1">Name <span class="text-red-500">*</span></label>
-              <input type="text" id="beaconAdGroupName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+              <input type="text" id="beaconAdGroupName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required aria-label="Beacon Ad Group Name" title="Beacon Ad Group Name">
               <p class="text-xs text-gray-500 mt-1">Ad group name</p>
             </div>
             <div>
               <label class="block text-sm font-medium text-gray-700 mb-1">Campaign</label>
-              <select id="beaconCampaign" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+              <select id="beaconCampaign" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required aria-label="Beacon Campaign" title="Beacon Campaign">
                 <option value="">Select campaign</option>
               </select>
               <p class="text-xs text-gray-500 mt-1">Campaign to tie this ad group to</p>
             </div>
             <div>
               <label class="block text-sm font-medium text-gray-700 mb-1">Audience</label>
-              <input type="text" id="beaconAudience" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+              <input type="text" id="beaconAudience" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Beacon Audience" title="Beacon Audience">
             </div>
             <div>
               <label class="block text-sm font-medium text-gray-700 mb-1">Multiview Classification</label>
-              <select id="beaconMultiviewClassification" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+              <select id="beaconMultiviewClassification" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Beacon Multiview Classification" title="Beacon Multiview Classification">
                 <option value="">-- Select --</option>
                 <option value="Active">Active</option>
                 <option value="Inactive">Inactive</option>
@@ -572,7 +572,7 @@
             </div>
             <div>
               <label class="block text-sm font-medium text-gray-700 mb-1">Multiview Tactic</label>
-              <select id="beaconMultiviewTactic" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+              <select id="beaconMultiviewTactic" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Beacon Multiview Tactic" title="Beacon Multiview Tactic">
                 <option value="">-- Select --</option>
                 <option value="Active">Active</option>
                 <option value="Inactive">Inactive</option>
@@ -586,7 +586,7 @@
       <div class="mb-4">
         <div class="flex items-center justify-between mb-2">
           <h3 class="text-lg font-semibold text-gray-800">Connectors</h3>
-          <button type="button" id="connectorsToggle" class="relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent bg-gray-200 transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" role="switch" aria-checked="false">
+          <button type="button" id="connectorsToggle" class="relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent bg-gray-200 transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" role="switch" aria-checked="false" tabindex="0" aria-label="Toggle Connectors Section">
             <span aria-hidden="true" class="pointer-events-none inline-block h-5 w-5 transform rounded-full bg-white shadow ring-0 transition duration-200 ease-in-out translate-x-0"></span>
           </button>
         </div>
@@ -638,11 +638,11 @@
 
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Name</label>
-                <input type="text" id="adGroupName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                <input type="text" id="adGroupName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required aria-label="Ad Group Name" title="Ad Group Name">
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Funnel Location</label>
-                <select id="adGroupFunnelLocation" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <select id="adGroupFunnelLocation" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Ad Group Funnel Location" title="Ad Group Funnel Location">
                   <option value="">Select funnel location</option>
                   <option value="Awareness">Awareness</option>
                   <option value="Consideration">Consideration</option>
@@ -652,7 +652,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Channel</label>
-                <select id="adGroupChannel" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <select id="adGroupChannel" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Ad Group Channel" title="Ad Group Channel">
                   <option value="">Select channel</option>
                   <option value="Display">Display</option>
                   <option value="Video">Video</option>
@@ -739,7 +739,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Primary Goal</label>
-                <select id="adGroupPrimaryGoal" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <select id="adGroupPrimaryGoal" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Ad Group Primary Goal" title="Ad Group Primary Goal">
                   <option value="">Select primary goal</option>
                   <option value="Cost per Acquisition (CPA)">Cost per Acquisition (CPA)</option>
                   <option value="Cost Per Mille (CPM)">Cost Per Mille (CPM)</option>
@@ -756,7 +756,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Audience</label>
-                <select id="adGroupAudience" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <select id="adGroupAudience" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Ad Group Audience" title="Ad Group Audience">
                   <option value="">Select audience</option>
                   <option value="Apply a shared audience">Apply a shared audience</option>
                   <option value="Koa Audiences">Koa Audiences</option>
@@ -769,7 +769,7 @@
                   <input type="number" id="adGroupFrequencyNumber" class="w-16 border border-gray-300 rounded-md px-2 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" min="1" placeholder="1">
                   <span class="text-sm text-gray-600">ads per</span>
                   <input type="number" id="adGroupFrequencyPer" class="w-16 border border-gray-300 rounded-md px-2 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" min="1" placeholder="1">
-                  <select id="adGroupFrequencyPeriod" class="border border-gray-300 rounded-md px-2 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                  <select id="adGroupFrequencyPeriod" class="border border-gray-300 rounded-md px-2 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Ad Group Frequency Period" title="Ad Group Frequency Period">
                     <option value="day">day</option>
                     <option value="week">week</option>
                     <option value="month">month</option>
@@ -778,7 +778,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Geos</label>
-                <select id="adGroupGeos" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                <select id="adGroupGeos" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500" aria-label="Ad Group Geos" title="Ad Group Geos">
                   <option value="">Select geos</option>
                   <option value="Specific Locations">Specific Locations</option>
                   <option value="Everywhere">Everywhere</option>
@@ -817,11 +817,11 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-4">
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Name</label>
-                <input type="text" id="adServerName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500">
+                <input type="text" id="adServerName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" aria-label="Ad Server Name" title="Ad Server Name">
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Status</label>
-                <select id="adServerStatus" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500">
+                <select id="adServerStatus" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" aria-label="Ad Server Status" title="Ad Server Status">
                   <option value="">Select status</option>
                   <option value="Active">Active</option>
                   <option value="Inactive">Inactive</option>
@@ -829,7 +829,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Compatibility</label>
-                <select id="adServerCompatibility" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500">
+                <select id="adServerCompatibility" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" aria-label="Ad Server Compatibility" title="Ad Server Compatibility">
                   <option value="">Select compatibility</option>
                   <option value="Display">Display</option>
                   <option value="Persona">Persona</option>
@@ -874,19 +874,19 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Testing Starts</label>
-                <input type="date" id="adServerTestingStarts" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500">
+                <input type="date" id="adServerTestingStarts" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" aria-label="Ad Server Testing Starts" title="Ad Server Testing Starts">
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Start Date</label>
-                <input type="date" id="adServerStartDate" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500">
+                <input type="date" id="adServerStartDate" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" aria-label="Ad Server Start Date" title="Ad Server Start Date">
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">End Date</label>
-                <input type="date" id="adServerEndDate" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500">
+                <input type="date" id="adServerEndDate" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" aria-label="Ad Server End Date" title="Ad Server End Date">
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Cost Structure</label>
-                <select id="adServerCostStructure" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500">
+                <select id="adServerCostStructure" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" aria-label="Ad Server Cost Structure" title="Ad Server Cost Structure">
                   <option value="">Select cost structure</option>
                   <option value="Cost Per Mille (CPM)">Cost Per Mille (CPM)</option>
                   <option value="Click-Through Rate (CTR)">Click-Through Rate (CTR)</option>
@@ -894,7 +894,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Cap Cost</label>
-                <select id="adServerCapCost" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500">
+                <select id="adServerCapCost" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" aria-label="Ad Server Cap Cost" title="Ad Server Cap Cost">
                   <option value="">Select cap cost</option>
                   <option value="OFF">OFF</option>
                   <option value="ON">ON</option>
