--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <header class="border-b border-gray-200 shadow-sm" style="background-color: #004E8B;">
       <div class="flex items-center justify-between px-4 py-2">
         <div class="flex items-center gap-3">
-          <img src="./assets/BeaconLogo.png" alt="Beacon Logo" class="h-9 w-auto" />
+          <img src="./assets/BeaconLogo.svg" alt="Beacon Logo" class="h-12 w-auto" />
         </div>
 
         <nav class="flex items-center gap-3 ml-auto">
@@ -509,7 +509,7 @@
           <div>
             <h2 class="text-2xl font-semibold text-white">Create New Advertiser</h2>
           </div>
-          <button id="closeModalX" class="text-white hover:text-blue-200 transition-colors">
+          <button id="closeModalX" class="text-white hover:text-blue-200 transition-colors" aria-label="Close wizard">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
             </svg>
@@ -1020,7 +1020,7 @@
     <div class="bg-white rounded-lg shadow-xl w-full max-w-2xl mx-4 max-h-[80vh] flex flex-col">
       <div class="flex items-center justify-between p-6 border-b border-gray-200">
         <h3 class="text-lg font-semibold text-gray-900">Select an account to connect to this advertiser:</h3>
-        <button type="button" id="closeLookupX" class="text-gray-400 hover:text-gray-600 transition-colors">
+        <button type="button" id="closeLookupX" class="text-gray-400 hover:text-gray-600 transition-colors" aria-label="Close account lookup modal">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
           </svg>
