--- a/AdvertiserCampaigns.html
+++ b/AdvertiserCampaigns.html
@@ -280,8 +280,8 @@
             </button>
             <div id="menuDropdown" class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-200 rounded-md shadow-lg">
               <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Advertisers</a>
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Profile</a>
-              <a href="#" id="menuAdmin" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Admin</a>
+              <a href="#" id="menuProfile" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Profile</a>
+              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Admin</a>
               <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Sign Out</a>
             </div>
           </div>
@@ -1098,7 +1098,8 @@
         name: 'Aurora Launch',
         expanded: true,
         campaigns: [
-         
+          { id: 'CAM-001', name: 'Aurora Teaser', state: 'Active', dsp: 'DV360', adGroups: 4 },
+          { id: 'CAM-002', name: 'Aurora Reveal', state: 'Inactive', dsp: 'Trade Desk', adGroups: 6 }
         ]
       },
       {
