--- a/CampaignsAdGroup.html
+++ b/CampaignsAdGroup.html
@@ -288,8 +288,8 @@
             </button>
             <div id="menuDropdown" class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-200 rounded-md shadow-lg">
               <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Advertisers</a>
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Profile</a>
-              <a href="#" id="menuAdmin" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Admin</a>
+              <a href="#" id="menuProfile" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Profile</a>
+              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Admin</a>
               <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Sign Out</a>
             </div>
           </div>
@@ -1243,13 +1243,7 @@
 
 
 
-                      <script>
-                        (function() {
-                        const pairs = [
-  // Beacon Fields
-  { span: 'displayBeaconCampaignId', input: 'beaconCampaignId' },
-      
-      <!-- Beacon Fields Section -->
+  <!-- Beacon Fields Section -->
       <div class="mb-4">
         <h3 class="text-lg font-semibold text-gray-800 mb-3">Beacon Fields</h3>
         <div class="bg-blue-50 border border-blue-200 rounded-lg p-4">
