admin updates and campaign group update

--- a/AdvertiserCampaigns.html
+++ b/AdvertiserCampaigns.html
@@ -1092,28 +1092,7 @@
     };
 
     // === SAMPLE GROUPED DATA (Tree) ===
-    const DEFAULT_GROUPS = [
-      {
-        id: 'GRP-AUR',
-        name: 'Aurora Launch',
-        expanded: true,
-        campaigns: [
-          { id: 'CAM-001', name: 'Aurora Teaser', state: 'Active', dsp: 'DV360', adGroups: 4 },
-          { id: 'CAM-002', name: 'Aurora Reveal', state: 'Inactive', dsp: 'Trade Desk', adGroups: 6 }
-        ]
-      },
-      {
-        id: 'GRP-HRV',
-        name: 'Harvest Promo',
-        expanded: true,
-        campaigns: [
-          { id: 'CAM-003', name: 'Autumn Offers', state: 'Active', dsp: 'Google Campaign Manager', adGroups: 3 },
-          { id: 'CAM-004', name: 'Thanksgiving Push', state: 'Active', dsp: 'DV360', adGroups: 5 },
-          { id: 'CAM-005', name: 'Weekend Harvest', state: 'Inactive', dsp: 'Trade Desk', adGroups: 2 },
-          { id: 'CAM-006', name: 'Last Call Harvest', state: 'Active', dsp: 'Trade Desk, Google Campaign Manager', adGroups: 4 }
-        ]
-      }
-    ];
+    const DEFAULT_GROUPS = [];
 
     // === MAIN APPLICATION (Tree Table) ===
     let app = null;
