--- a/Admin_Roles_Permissions.html
+++ b/Admin_Roles_Permissions.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Management - Roles & Permissions</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./assets/toast.css">
+    <script src="./assets/toast.js" defer></script>
+    <link rel="stylesheet" href="./assets/loading.css">
+    <script src="./assets/loading.js" defer></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -142,6 +147,60 @@
     </style>
 </head>
 <body>
+  <!-- Beacon Header -->
+  <header class="border-b border-gray-200 shadow-sm" style="background-color: #004E8B;">
+    <div class="flex items-center justify-between px-4 py-2">
+      <div class="flex items-center gap-3">
+        <img src="./assets/Beaconlogo.svg" alt="Beacon Logo" class="h-12 w-auto" />
+      </div>
+
+      <nav class="flex items-center gap-3 ml-auto">
+        <h3 class="text-base text-white" style="font-size: 1.5rem; padding-right: 15px;">Admin</h3>
+        <span class="text-white select-none">|</span>
+
+        <!-- Notifications -->
+        <div class="relative">
+          <button id="notificationButton" class="p-2 rounded-md text-white relative" title="Notifications" aria-label="View notifications">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path>
+            </svg>
+            <span id="notificationDot" class="absolute top-2 right-2 w-3 h-3 bg-red-500 rounded-full border-2 border-white"></span>
+          </button>
+
+          <div id="notificationDropdown" class="hidden absolute right-0 mt-2 w-80 bg-white border border-gray-200 rounded-md shadow-lg z-50 max-h-96 overflow-hidden">
+            <div class="p-3 border-b border-gray-200 bg-gray-50">
+              <div class="flex items-center justify-between">
+                <h3 class="text-sm font-semibold text-gray-900">Notifications</h3>
+                <button id="markAllReadBtn" class="text-xs text-blue-600 hover:text-blue-800">Mark all read</button>
+              </div>
+            </div>
+            <div class="max-h-80 overflow-y-auto">
+              <div id="notificationList">
+                <div class="p-3 text-center border-t border-gray-200">
+                  <a href="#" class="text-sm text-blue-600 hover:text-blue-800 font-medium">View all notifications</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Waffle Menu -->
+        <div class="relative">
+          <button class="p-0 rounded-md text-white" id="menuButton" title="Menu" aria-label="Open navigation menu">
+            <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 20 20">
+              <path d="M4 4h3v3H4V4zM8.5 4h3v3h-3V4zM13 4h3v3h-3V4zM4 8.5h3v3H4v-3zM8.5 8.5h3v3h-3V8.5zM13 8.5h3v3h-3V8.5zM4 13h3v3H4v-3zM8.5 13h3v3h-3V13zM13 13h3v3h-3V13z"></path>
+            </svg>
+          </button>
+          <div id="menuDropdown" class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-200 rounded-md shadow-lg">
+            <a href="./index.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Advertisers</a>
+            <a href="#" id="menuProfile" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Profile</a>
+            <a href="./Admin_Users.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Admin</a>
+            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Sign Out</a>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </header>
 
 
   <div class="dashboard-container">
@@ -154,8 +213,6 @@
           <div class="nav-group-title">User Management</div>
           <a href="Admin_Users.html" class="nav-item"><i class="fas fa-users"></i><span>Users</span></a>
           <a href="Admin_Roles_Permissions.html" class="nav-item active"><i class="fas fa-user-tag"></i><span>Roles & Permissions</span></a>
-          <a href="Admin_User_Groups.html" class="nav-item"><i class="fas fa-users-cog"></i><span>User Groups</span></a>
-          <a href="Admin_Access_Control.html" class="nav-item"><i class="fas fa-key"></i><span>Access Control</span></a>
           <a href="Admin_User_Activity_Logs.html" class="nav-item"><i class="fas fa-history"></i><span>User Activity Logs</span></a>
         </div>
         <div class="nav-group">
@@ -592,6 +649,33 @@
       toggle.addEventListener('click', function() {
         this.classList.toggle('active');
       });
+    });
+
+    // Header menu functionality
+    const menuButton = document.getElementById('menuButton');
+    const menuDropdown = document.getElementById('menuDropdown');
+    const notificationButton = document.getElementById('notificationButton');
+    const notificationDropdown = document.getElementById('notificationDropdown');
+
+    if (menuButton && menuDropdown) {
+      menuButton.addEventListener('click', function(e) {
+        e.stopPropagation();
+        menuDropdown.classList.toggle('hidden');
+        if (notificationDropdown) notificationDropdown.classList.add('hidden');
+      });
+    }
+
+    if (notificationButton && notificationDropdown) {
+      notificationButton.addEventListener('click', function(e) {
+        e.stopPropagation();
+        notificationDropdown.classList.toggle('hidden');
+        if (menuDropdown) menuDropdown.classList.add('hidden');
+      });
+    }
+
+    document.addEventListener('click', function() {
+      if (menuDropdown) menuDropdown.classList.add('hidden');
+      if (notificationDropdown) notificationDropdown.classList.add('hidden');
     });
   </script>
 </body>
